# deckora-extract

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.txt  README.md  package.json  pyproject.toml  requirements-service.txt  requirements.txt  wrangler.toml
.github/workflows/: deploy.yml
app/: layout.py  main.py
docs/: APIS.md  ARCHITECTURE.md  CHANGELOG.md  INSTALL.md  PHOTO_DELAYERING.md  VERIFICATION.md
samples/input/: README.md
samples/output/: deal_data.json  extraction_report.json  extraction_status.json
samples/output/photos/: photos_manifest.json
scripts/: extract_batch.py  extract_one.py  extract_photos.py  verify_corpus.py
src/shop1031_extract/: __init__.py  api_confirm.py  contamination.py  extract.py  fields.py  intake.py  model.py  ocr.py  paths.py  r2_preserve.py  schema.py  validate.py  verify.py
src/shop1031_extract/brokers/: __init__.py  cushman.py
src/shop1031_extract/photos/: __init__.py  fallback.py  manifest.py  overlay.py  rawextract.py  reconstruct.py
src/shop1031_extract/photos/logo_templates/: README.md
tests/: make_photo_fixture.py  test_contamination.py  test_fields.py  test_layout.py  test_ocr.py  test_photos.py
worker/: index.js
